Fixed the errors after checking code quality and accessibility quality in html, ccs, js pages. Taken into account remarks after usability testing.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon"  href="images/favicon-2.ico" type="image/x-icon">
   <title>Skrepinskaya Natalia UX/UI Designer</title>
-  <link rel="stylesheet" type=text/css href="css/normalize.css">
-  <link rel="stylesheet" type=text/css href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700|Rokkitt" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700/Rokkitt" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
@@ -36,26 +36,32 @@
       <h1 class="title">improve your business</h1>
     </div>
 
-      <div class="menu">
-        <ul>
-          <li>
-            <h2>UX Design</h2>
-            <img src="images/photo/flat3@2x.png" srcset="images/photo/flat3@2x.png 1x, images/photo/flat3@2x.png 2x, images/photo/flat3@2x.png 3x" alt="Illustration">
-          </li>
-          <li>
-            <h2>UI Design</h2>
-            <img src="images/photo/flat2@2x.png" srcset="images/photo/flat2@2x.png 1x, images/photo/flat2@2x.png 2x, images/photo/flat2@2x.png 3x" alt="Illustration">
-          </li>
-          <li>
-            <h2>Frontend</h2>
-            <img src="images/photo/flat1@2x.png" srcset="images/photo/flat1@2x.png 1x, images/photo/flat1@2x.png 2x, images/photo/flat1@2x.png 3x" alt="Illustration">
-          </li>
-        </ul>
-    </div>
-  </div>
+    <div class="menu">
+     <ul>
+       <li>
+         <a href="project1.html">
+           <h2>UX Design</h2>
+           <img src="images/photo/ux@1x.png" srcset="images/photo/ux@1x.png 1x, images/photo/ux@2x.png 2x, images/photo/ux@3x.png 3x" alt="Illustration of ux process">
+         </a>
+       </li>
+       <li>
+         <a href="project2.html">
+           <h2>UI Design</h2>
+           <img src="images/photo/ui@1x.png" srcset="images/photo/ui@1x.png 1x, images/photo/ui@2x.png 2x, images/photo/ui@3x.png 3x" alt="Illustration of ui process">
+         </a>
+       </li>
+       <li>
+         <a href="project4.html">
+           <h2>Frontend</h2>
+           <img src="images/photo/coding@1x.png" srcset="images/photo/coding@1x.png 1x, images/photo/coding@2x.png 2x, images/photo/coding@3x.png 3x" alt="Illustration of coding process">
+         </a>
+       </li>
+     </ul>
+ </div>
+</div>
 
   <section id="my_works"> <!--the section #my_works-->
-        <h1>Projects</h1>
+        <h2>Projects</h2>
 
       <div class="my-works">
           <a class="works" href="project1.html"> <!--project1-->
@@ -101,7 +107,7 @@
   </section>
 
   <section id="my_story">  <!--the section #my_story-->
-      <h1>Hi, I'm Natalia!</h1>
+      <h2>Hi, I'm Natalia!</h2>
 
           <div class="about">
             <img class="mein-1" src="images/photo/my_photo@1x.png" srcset="images/photo/my_photo@1x.png 1x, images/photo/my_photo@2x.png 2x, images/photo/my_photo@3x.png 3x" alt="Girl">
@@ -109,7 +115,7 @@
             </p>
 
             <div class="download-cv"> <!--button to view or download resume-->
-              <button type="button" value="submit" onClick="window.location. href='images/cv/Skrepinskaya_Natalia_Resume copy.pdf'">submit</button>
+              <button type="button" value="submit" onclick="window.location. href='images/cv/Skrepinskaya_Natalia_Resume copy.pdf'">resume</button>
             </div>
          </div>
 
@@ -204,7 +210,7 @@
   </section>
 
   <section id="contact_me" >
-    <h1>Stay in Touch</h1>
+    <h2>Stay in Touch</h2>
     <div class="inputs">
       <form action="/send.php" method="post">
         <div class="group-name">
@@ -213,7 +219,7 @@
         </div>
         <div class="group-email">
           <label>Email</label>
-          <input type="email" id=email required>
+          <input type="email" id="email" required>
         </div>
         <div class="group">
           <label>Message</label>
@@ -225,12 +231,18 @@
 
     <div>
         <h2>Follow Me</h2>
+        <div class="address">
+          <p>My email address</p>
+          <a href="mailto:info@skrepinskayanatalia.com?subject=%20Hello%20Natalia">
+            <p>info@skrepinskayanatalia.com</p>
+          </a>
+        </div>
       <div class="menu-social">
       <ul>
         <li>
           <a target="_blank" href="https://www.linkedin.com/in/natalia-skrepinskaya">
-            <svg class="icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            	 viewBox="0 0 486.392 486.392" style="enable-background:new 0 0 486.392 486.392;" xml:space="preserve">
+            <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            	 viewbox="0 0 486.392 486.392" style="enable-background:new 0 0 486.392 486.392;" xml:space="preserve">
               <g>
             	  <g>
             		  <g>
@@ -249,8 +261,8 @@
 
         <li>
           <a target="_blank" href="https://www.behance.net/beniprodux09bc">
-            <svg class="icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            	 viewBox="0 0 97.75 97.75" style="enable-background:new 0 0 97.75 97.75;" xml:space="preserve">
+            <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            	 viewbox="0 0 97.75 97.75" style="enable-background:new 0 0 97.75 97.75;" xml:space="preserve">
               <g>
             	  <g>
             		  <path d="M39.337,38.729c0-4.611-3.137-4.611-3.137-4.611h-1.661H23.294v9.894H35.4C37.492,44.011,39.337,43.342,39.337,38.729z"/>
@@ -269,8 +281,8 @@
 
         <li>
           <a target="_blank" href="https://github.com/NataliaSkrepinskaya">
-            <svg class="icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            	  viewBox="0 0 438.549 438.549" style="enable-background:new 0 0 438.549 438.549;"
+            <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            	  viewbox="0 0 438.549 438.549" style="enable-background:new 0 0 438.549 438.549;"
             	 xml:space="preserve">
               <g>
             	  <path d="M409.132,114.573c-19.608-33.596-46.205-60.194-79.798-79.8C295.736,15.166,259.057,5.365,219.271,5.365
@@ -300,11 +312,11 @@
 
         <li>
           <a target="_blank" href="https://www.facebook.com/reghina.felice">
-            <svg class="icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            	 viewBox="0 0 112.196 112.196" style="enable-background:new 0 0 112.196 112.196;" xml:space="preserve">
+            <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            	 viewbox="0 0 112.196 112.196" style="enable-background:new 0 0 112.196 112.196;" xml:space="preserve">
               <g>
                <circle class="icon-circle" cx="56.098" cy="56.098" r="56.098"/>
-            	  <path style="fill:#FFFFFF;" d="M70.201,58.294h-10.01v36.672H45.025V58.294h-7.213V45.406h7.213v-8.34
+            	  <path style="fill:#DFD9F8;" d="M70.201,58.294h-10.01v36.672H45.025V58.294h-7.213V45.406h7.213v-8.34
             		c0-5.964,2.833-15.303,15.301-15.303L71.56,21.81v12.51h-8.151c-1.337,0-3.217,0.668-3.217,3.513v7.585h11.334L70.201,58.294z"/>
               </g>
             </svg>
@@ -322,8 +334,8 @@
     </div>
   </footer>
   <a class="fixed" href="#">
-    <svg class="fixedicon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-    	 viewBox="0 0 474.64 474.64" style="enable-background:new 0 0 474.64 474.64;" xml:space="preserve">
+    <svg class="fixedicon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+    	 viewbox="0 0 474.64 474.64" style="enable-background:new 0 0 474.64 474.64;" xml:space="preserve">
     <g>
     	<g>
     		<g>
