--- a/project2.html
+++ b/project2.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon"  href="images/favicon-2.ico" type="image/x-icon">
     <title>Skrepinskaya Natalia UX/UI Designer</title>
-    <link rel="stylesheet" type=text/css href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700|Rokkitt" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700/Rokkitt" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
@@ -22,7 +22,7 @@
         </a>
         <nav>
 	        <ul>
-            <li class="project-link"><a href="index.html#home">Close</a></li>
+            <li class="project-link"><a href="index.html#my_works">Back to projects</a></li>
           </ul>
         </nav>
       </div>
@@ -134,7 +134,7 @@
   </section>
 
   <section id="contact_me" >
-    <h1>Stay in Touch</h1>
+    <h2>Stay in Touch</h2>
     <div class="inputs">
       <form action="/send.php" method="post">
         <div class="group">
@@ -143,7 +143,7 @@
         </div>
         <div class="group-email">
           <label>Email</label>
-          <input type="email" id=email required>
+          <input type="email" id="email" required>
         </div>
         <div class="group">
           <label>Message</label>
@@ -154,13 +154,19 @@
     </div>
 
     <div>
-        <h1>Follow Me</h1>
+        <h2>Follow Me</h2>
+        <div class="address">
+          <p>My email address</p>
+          <a href="mailto:info@skrepinskayanatalia.com?subject=%20Hello%20Natalia">
+            <p>info@skrepinskayanatalia.com</p>
+          </a>
+        </div>
       <div class="menu-social">
       <ul>
         <li>
           <a target="_blank" href="https://www.linkedin.com/in/natalia-skrepinskaya">
             <svg class="icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            	 viewBox="0 0 486.392 486.392" style="enable-background:new 0 0 486.392 486.392;" xml:space="preserve">
+            	 viewbox="0 0 486.392 486.392" style="enable-background:new 0 0 486.392 486.392;" xml:space="preserve">
               <g>
             	  <g>
             		  <g>
@@ -179,8 +185,8 @@
 
         <li>
           <a target="_blank" href="https://www.behance.net/beniprodux09bc">
-            <svg class="icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            	 viewBox="0 0 97.75 97.75" style="enable-background:new 0 0 97.75 97.75;" xml:space="preserve">
+            <svg class="icon" version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            	 viewbox="0 0 97.75 97.75" style="enable-background:new 0 0 97.75 97.75;" xml:space="preserve">
               <g>
             	  <g>
             		  <path d="M39.337,38.729c0-4.611-3.137-4.611-3.137-4.611h-1.661H23.294v9.894H35.4C37.492,44.011,39.337,43.342,39.337,38.729z"/>
@@ -199,8 +205,8 @@
 
         <li>
           <a target="_blank" href="https://github.com/NataliaSkrepinskaya">
-            <svg class="icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            	  viewBox="0 0 438.549 438.549" style="enable-background:new 0 0 438.549 438.549;"
+            <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            	  viewbox="0 0 438.549 438.549" style="enable-background:new 0 0 438.549 438.549;"
             	 xml:space="preserve">
               <g>
             	  <path d="M409.132,114.573c-19.608-33.596-46.205-60.194-79.798-79.8C295.736,15.166,259.057,5.365,219.271,5.365
@@ -230,8 +236,8 @@
 
         <li>
           <a target="_blank" href="https://www.facebook.com/reghina.felice">
-            <svg class="icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            	 viewBox="0 0 112.196 112.196" style="enable-background:new 0 0 112.196 112.196;" xml:space="preserve">
+            <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            	 viewbox="0 0 112.196 112.196" style="enable-background:new 0 0 112.196 112.196;" xml:space="preserve">
               <g>
                <circle class="icon-circle" cx="56.098" cy="56.098" r="56.098"/>
             	  <path style="fill:#FFFFFF;" d="M70.201,58.294h-10.01v36.672H45.025V58.294h-7.213V45.406h7.213v-8.34
@@ -253,8 +259,8 @@
   </footer>
 
   <a class="fixed" href="#">
-    <svg class="fixedicon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 474.64 474.64" style="enable-background:new 0 0 474.64 474.64;" xml:space="preserve">
+    <svg class="fixedicon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+       viewbox="0 0 474.64 474.64" style="enable-background:new 0 0 474.64 474.64;" xml:space="preserve">
       <g>
         <g>
           <g>
