--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
         <h2>Follow Me</h2>
         <div class="address">
           <p>My email address</p>
-          <a href="mailto:info@skrepinskayanatalia.com?subject=%20Hello%20Natalia">
-            <p>info@skrepinskayanatalia.com</p>
+          <a href="mailto:mail@skrepinskayanatalia.com?subject=%20Hello%20Natalia">
+            <p>mail@skrepinskayanatalia.com</p>
           </a>
         </div>
       <div class="menu-social">
@@ -316,7 +316,7 @@
             	 viewbox="0 0 112.196 112.196" style="enable-background:new 0 0 112.196 112.196;" xml:space="preserve">
               <g>
                <circle class="icon-circle" cx="56.098" cy="56.098" r="56.098"/>
-            	  <path style="fill:#DFD9F8;" d="M70.201,58.294h-10.01v36.672H45.025V58.294h-7.213V45.406h7.213v-8.34
+            	  <path class="icon-inside" d="M70.201,58.294h-10.01v36.672H45.025V58.294h-7.213V45.406h7.213v-8.34
             		c0-5.964,2.833-15.303,15.301-15.303L71.56,21.81v12.51h-8.151c-1.337,0-3.217,0.668-3.217,3.513v7.585h11.334L70.201,58.294z"/>
               </g>
             </svg>
