--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Skrepinskaya Natalia UX/UI Designer</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700/Rokkitt" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700%7Rokkitt" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
@@ -16,8 +16,11 @@
       <div class="container">
         <a href="#home">
           <picture>
-            <source srcset="images/logotype/logo35@1x.png 1x, images/logotype/logo35@2x.png 2x, images/logotype/logo35@3x.png 3x" media="(max-width: 991px)">
-            <source srcset="images/logotype/logo70@1x.png 1x, images/logotype/logo70@2x.png 2x, images/logotype/logo70@3x.png 3x" media="(min-width: 992px)">
+            <source srcset="images/logotype/logo35@1x.png 1x, images/logotype/logo35@2x.png 2x, images/logotype/logo35@3x.png 3x" media="(max-width: 374px)">
+            <source srcset="images/logotype/logo45@1x.png 1x, images/logotype/logo45@2x.png 2x, images/logotype/logo45@3x.png 3x" media="(max-width: 575px)">
+            <source srcset="images/logotype/logo55@1x.png 1x, images/logotype/logo55@2x.png 2x, images/logotype/logo55@3x.png 3x" media="(max-width: 767px)">
+            <source srcset="images/logotype/logo60@1x.png 1x, images/logotype/logo60@2x.png 2x, images/logotype/logo60@3x.png 3x" media="(max-width: 992px)">
+            <source srcset="images/logotype/logo70@1x.png 1x, images/logotype/logo70@2x.png 2x, images/logotype/logo70@3x.png 3x" media="(min-width: 991px)">
             <img src="images/logotype/logo70@1x.png" srcset="images/logotype/logo70@1x.png 1x, images/logotype/logo70@2x.png 2x, images/logotype/logo70@3x.png 3x" alt="logo">
           </picture>
         </a>
@@ -233,8 +236,8 @@
         <h2>Follow Me</h2>
         <div class="address">
           <p>My email address</p>
-          <a href="mailto:mail@skrepinskayanatalia.com?subject=%20Hello%20Natalia">
-            <p>mail@skrepinskayanatalia.com</p>
+          <a href="mailto:mail@skrepinskaya.com?subject=%20Hello%20Natalia">
+            <p>mail@skrepinskaya.com</p>
           </a>
         </div>
       <div class="menu-social">
