--- a/project4.html
+++ b/project4.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon"  href="images/favicon-2.ico" type="image/x-icon">
     <title>Skrepinskaya Natalia UX/UI Designer</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700/Rokkitt" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700%7Rokkitt" rel="stylesheet">
 </head>
 <body>
 
@@ -132,8 +132,8 @@
         <h2>Follow Me</h2>
         <div class="address">
           <p>My email address</p>
-          <a href="mailto:mail@skrepinskayanatalia.com?subject=%20Hello%20Natalia">
-            <p>mail@skrepinskayanatalia.com</p>
+          <a href="mailto:mail@skrepinskaya.com?subject=%20Hello%20Natalia">
+            <p>mail@skrepinskaya.com</p>
           </a>
         </div>
        <div class="menu-social">
