--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
   <section id="contact_me" >
     <h2>Stay in Touch</h2>
     <div class="inputs">
-      <form action="/send.php" method="post">
+      <form action="send.php" method="post">
         <div class="group-name">
           <label>Name</label>
           <input type="text" required>
